[gd_scene load_steps=6 format=3 uid="uid://u4mxkfjd5fnq"]

[ext_resource type="Script" path="res://Code/GUI/UX.gd" id="1_xxrsr"]
[ext_resource type="PackedScene" uid="uid://cyarsbbwewu6f" path="res://Code/GUI/HPset.tscn" id="2_m08i3"]
[ext_resource type="Script" path="res://Code/GUI/ProgressBar.gd" id="3_def61"]
[ext_resource type="Resource" uid="uid://c163liyttkno0" path="res://Code/runtime_data.tres" id="4_73qpb"]

[sub_resource type="LabelSettings" id="LabelSettings_jd8oq"]
font_size = 32

[node name="UX" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxrsr")

[node name="Counter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 98.0
offset_right = 15.0
offset_bottom = 124.0
grow_horizontal = 2
text = "00"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 164.0
offset_top = 70.0
offset_right = 306.0
offset_bottom = 98.0

[node name="Label" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Score: "

[node name="ScoreValue" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 52.0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 27.0
text = "XXX"
horizontal_alignment = 1

[node name="HP" parent="." instance=ExtResource("2_m08i3")]
layout_mode = 0

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_jd8oq")

[node name="Factor" type="Control" parent="."]
anchors_preset = 0
offset_left = 192.0
offset_top = 7.0
offset_right = 381.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="Factor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = -1.0
offset_right = 134.0
offset_bottom = 25.0
grow_horizontal = 0
text = "(rythm) [x0]"

[node name="LabelBeat" type="Label" parent="Factor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 24.0
offset_right = 137.0
offset_bottom = 50.0
grow_horizontal = 0
text = "(music) [x0]"

[node name="LabelTotal" type="Label" parent="Factor"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 64.0
offset_right = 108.0
offset_bottom = 90.0
grow_horizontal = 0
text = "(total) [x0]"

[node name="ProgressBar" type="ProgressBar" parent="Factor"]
layout_mode = 1
offset_right = 147.0
offset_bottom = 27.0
value = 50.0
script = ExtResource("3_def61")
runtime_data = ExtResource("4_73qpb")

[node name="LeaveB" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -45.0
offset_right = 90.0
offset_bottom = -14.0
grow_vertical = 0
text = "Leave"

[connection signal="pressed" from="LeaveB" to="." method="_on_leave_b_pressed"]
